--- a/index.html
+++ b/index.html
@@ -11,27 +11,29 @@
     <!--NAV-->
     <nav>
       <ul>
-        <li class="activeNav"><a href="">Home</a></li>
-        <li><a href="">Album 1</a></li>
-        <li><a href="">Album 2</a></li>
-        <li><a href="">Album 3</a></li>
-        <li><a href="">Album 4</a></li>
-        <li><a href="">Album 5</a></li>
-        <li><a href="">Album 6</a></li>
+
+        <li class="activeNav"><a href="" rel="home">Home</a></li>
+        <li><a href="" rel="post1">DOGS</a></li>
+        <li><a href="" rel="post2">POLAR BEARS</a></li>
+        <li><a href="" rel="post3">MONKEYS</a></li>
+        <li><a href="" rel="post4">CATS</a></li>
+        <li><a href="" rel="post5">ELEPHANTS</a></li>
+        <li><a href="" rel="post6">LIONS</a></li>
       </ul>
     </nav>
+
     <!--END NAV-->
   </header>
   <section>
 
     <div class="home active">
-    <h1>MY ALBUMS</h1>
-      <a href=""><img src="images/dog1.jpg" alt=""></a>
-      <a href=""><img src="images/polar1.jpg" alt=""></a>
-      <a href=""><img src="images/monkey1.jpg" alt=""></a>
-      <a href=""><img src="images/cat1.jpg" alt=""></a>
-      <a href=""><img src="images/elephant1.jpg" alt=""></a>
-      <a href=""><img src="images/lion1.jpg" alt=""></a>
+    <h1>MY ALBUMS.. RAWR.</h1>
+      <a href="" rel="post1"><img src="images/dog1.jpg" alt=""></a>
+      <a href="" rel="post2"><img src="images/polar1.jpg" alt=""></a>
+      <a href="" rel="post3"><img src="images/monkey1.jpg" alt=""></a>
+      <a href="" rel="post4"><img src="images/cat1.jpg" alt=""></a>
+      <a href="" rel="post5"><img src="images/elephant1.jpg" alt=""></a>
+      <a href="" rel="post6"><img src="images/lion1.jpg" alt=""></a>
     </div>
 
 
