--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <section>
 
     <div class="home active">
-    <h1>MY ALBUMS.. RAWR.</h1>
+    <h1>FURRTOGRAPHY.</h1>
       <a href="" rel="post1"><img src="images/dog1.jpg" alt=""></a>
       <a href="" rel="post2"><img src="images/polar1.jpg" alt=""></a>
       <a href="" rel="post3"><img src="images/monkey1.jpg" alt=""></a>
@@ -38,52 +38,47 @@
 
 
     <article class="post1">
-      <h2>ALBUM 1</h2>
+      <h2>WOOF, DOGS.</h2>
     <img src="images/dog1.jpg" alt="">
     <img src="images/dog2.jpg" alt="">
     <img src="images/dog3.jpg" alt="">
     </article>
     <article class="post2">
-      <h2>ALBUM 2</h2>
+      <h2>GROWL, BEARS.</h2>
       <img src="images/polar1.jpg" alt="">
       <img src="images/polar2.jpg" alt="">
       <img src="images/polar3.jpg" alt="">
     </article>
     <article class="post3">
-      <h2>ALBUM 3</h2>
+      <h2>OOH OOH, MONKEYS.</h2>
       <img src="images/monkey1.jpg" alt="">
       <img src="images/monkey2.jpg" alt="">
       <img src="images/monkey3.jpg" alt="">
     </article>
     <article class="post4">
-      <h2>ALBUM 4</h2>
+      <h2>MEOW, CATS.</h2>
       <img src="images/cat1.jpg" alt="">
       <img src="images/cat2.jpg" alt="">
       <img src="images/cat3.jpg" alt="">
       </article>
     <article class="post5">
-      <h2>ALBUM 5</h2>
+      <h2>RUMBLE, ELEPHANTS.</h2>
       <img src="images/elephant1.jpg" alt="">
       <img src="images/elephant2.jpg" alt="">
       <img src="images/elephant3.jpg" alt="">
       </article>
     <article class="post6">
-      <h2>ALBUM 6</h2>
+      <h2>RAWR, LIONS.</h2>
       <img src="images/lion1.jpg" alt="">
       <img src="images/lion2.jpg" alt="">
       <img src="images/lion3.jpg" alt="">
       </article>
   </section>
 
-  <!--SIDE BAR-->
-  <!--Do not need a sidebar at this time
-  <aside>
-    <div class="sidebar">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse eius atque magnam necessitatibus aperiam et recusandae voluptates fugiat explicabo impedit pariatur voluptas ad, sed porro quos provident vero tempore sit!</p>
-    </div>
-  </aside>-->
 
-<!--END SIDE BAR-->
+  <div class="enlarge">
+    <img src="images/polar1.jpg" alt="">
+  </div>
 
 <!--FOOTER-->
 <!--Unsure if you need a footer at this time
