working files, project in progress

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       <ul>
 
         <li class="activeNav"><a href="" rel="home">Home</a></li>
-        <li><a href="" rel="post1">DOGS</a></li>
-        <li><a href="" rel="post2">POLAR BEARS</a></li>
-        <li><a href="" rel="post3">MONKEYS</a></li>
-        <li><a href="" rel="post4">CATS</a></li>
-        <li><a href="" rel="post5">ELEPHANTS</a></li>
-        <li><a href="" rel="post6">LIONS</a></li>
+        <li><a href="" rel="post1">DOG ALBUM</a></li>
+        <li><a href="" rel="post2">POLAR BEAR ALBUM</a></li>
+        <li><a href="" rel="post3">MONKEY ALBUM</a></li>
+        <li><a href="" rel="post4">CAT ALBUM</a></li>
+        <li><a href="" rel="post5">ELEPHANT ALBUM</a></li>
+        <li><a href="" rel="post6">LION ALBUM</a></li>
       </ul>
     </nav>
 
@@ -27,7 +27,7 @@
   <section>
 
     <div class="home active">
-    <h1>FURRTOGRAPHY.</h1>
+    <h1>MY PHOTO ALBUMS</h1>
       <a href="" rel="post1"><img src="images/dog1.jpg" alt=""></a>
       <a href="" rel="post2"><img src="images/polar1.jpg" alt=""></a>
       <a href="" rel="post3"><img src="images/monkey1.jpg" alt=""></a>
@@ -38,47 +38,47 @@
 
 
     <article class="post1">
-      <h2>WOOF, DOGS.</h2>
+      <h2>DOG ALBUM</h2>
     <img src="images/dog1.jpg" alt="">
     <img src="images/dog2.jpg" alt="">
     <img src="images/dog3.jpg" alt="">
     </article>
     <article class="post2">
-      <h2>GROWL, BEARS.</h2>
+      <h2>POLAR BEAR ALBUM</h2>
       <img src="images/polar1.jpg" alt="">
       <img src="images/polar2.jpg" alt="">
       <img src="images/polar3.jpg" alt="">
     </article>
     <article class="post3">
-      <h2>OOH OOH, MONKEYS.</h2>
+      <h2>MONKEY ALBUM</h2>
       <img src="images/monkey1.jpg" alt="">
       <img src="images/monkey2.jpg" alt="">
       <img src="images/monkey3.jpg" alt="">
     </article>
     <article class="post4">
-      <h2>MEOW, CATS.</h2>
+      <h2>CAT ALBUM</h2>
       <img src="images/cat1.jpg" alt="">
       <img src="images/cat2.jpg" alt="">
       <img src="images/cat3.jpg" alt="">
       </article>
     <article class="post5">
-      <h2>RUMBLE, ELEPHANTS.</h2>
+      <h2>ELEPHANT ALBUM</h2>
       <img src="images/elephant1.jpg" alt="">
       <img src="images/elephant2.jpg" alt="">
       <img src="images/elephant3.jpg" alt="">
       </article>
     <article class="post6">
-      <h2>RAWR, LIONS.</h2>
+      <h2>LION ALBUM</h2>
       <img src="images/lion1.jpg" alt="">
       <img src="images/lion2.jpg" alt="">
       <img src="images/lion3.jpg" alt="">
       </article>
   </section>
 
-
+<!--
   <div class="enlarge">
     <img src="images/polar1.jpg" alt="">
-  </div>
+  </div>-->
 
 <!--FOOTER-->
 <!--Unsure if you need a footer at this time
